@@ -38,20 +38,23 @@ PyYAML = "^6.0"
 pycryptodomex = "^3.14.1"
 requests = "^2.28.0"
 tenacity = "^8.0.1"
+sphinx = { version="^4.5.0", optional=true }
+sphinx-autoapi = { version="^1.8.4", optional=true }
+toml = { version="^0.10.2", optional=true }
+
+[tool.poetry.extras]
+docs = [ "sphinx", "sphinx-autoapi", "toml" ]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.2"
 pytest-testdox = "^3.0.1"
 coverage = "^6.3.2"
 pylint = "^2.15.0"
-toml = "^0.10.2"
 pre-commit = "^2.18.1"
 black = "^22.3.0"
 mypy = "^0.950"
 isort = "^5.10.1"
-sphinx-autoapi = "^1.8.4"
 coveralls = "^3.3.1"
-Sphinx = "^4.5.0"
 types-PyYAML = "^6.0.8"
 types-requests = "^2.27.30"
 colorama = "^0.4.5"
